--- a/Grading/lab-10.html
+++ b/Grading/lab-10.html
@@ -10,20 +10,20 @@
       <li><b>test_ll_fix_simple</b>
       <ul>
       <li>Grade Percentage: 10</li>
-      <li>Your solution failed this test case! taking 0.071 sec</Li>
+      <li>Your solution failed this test case! taking 0.063 sec</Li>
 <li><pre>SyntaxError: invalid syntax (<tested-program>, line 22)</pre></li>
 <li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/execution_base.py", line 63, in call_test_function
-    **pre_hook_info["extra_kwargs"]
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/core.py", line 47, in wrapper
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
+    test_function(
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
     raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/program_container.py", line 38, in run
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
     self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/program_container.py", line 53, in _exec_code
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
     code = compile(source, "<tested-program>", "exec", dont_inherit=True)
   File "<tested-program>", line 22
     self.right, n.right, self.left, n.left = n.right, n.left, n, self.
-                                                                     ^
+                                                                      ^
 SyntaxError: invalid syntax
 </pre></li>
       </ul>
@@ -31,20 +31,20 @@ SyntaxError: invalid syntax
       <li><b>test_rr_fix_simple</b>
       <ul>
       <li>Grade Percentage: 10</li>
-      <li>Your solution failed this test case! taking 0.092 sec</Li>
+      <li>Your solution failed this test case! taking 0.075 sec</Li>
 <li><pre>SyntaxError: invalid syntax (<tested-program>, line 22)</pre></li>
 <li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/execution_base.py", line 63, in call_test_function
-    **pre_hook_info["extra_kwargs"]
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/core.py", line 47, in wrapper
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
+    test_function(
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
     raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/program_container.py", line 38, in run
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
     self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/program_container.py", line 53, in _exec_code
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
     code = compile(source, "<tested-program>", "exec", dont_inherit=True)
   File "<tested-program>", line 22
     self.right, n.right, self.left, n.left = n.right, n.left, n, self.
-                                                                     ^
+                                                                      ^
 SyntaxError: invalid syntax
 </pre></li>
       </ul>
@@ -52,20 +52,20 @@ SyntaxError: invalid syntax
       <li><b>test_lr_fix_simple</b>
       <ul>
       <li>Grade Percentage: 10</li>
-      <li>Your solution failed this test case! taking 0.097 sec</Li>
+      <li>Your solution failed this test case! taking 0.074 sec</Li>
 <li><pre>SyntaxError: invalid syntax (<tested-program>, line 22)</pre></li>
 <li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/execution_base.py", line 63, in call_test_function
-    **pre_hook_info["extra_kwargs"]
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/core.py", line 47, in wrapper
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
+    test_function(
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
     raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/program_container.py", line 38, in run
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
     self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/program_container.py", line 53, in _exec_code
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
     code = compile(source, "<tested-program>", "exec", dont_inherit=True)
   File "<tested-program>", line 22
     self.right, n.right, self.left, n.left = n.right, n.left, n, self.
-                                                                     ^
+                                                                      ^
 SyntaxError: invalid syntax
 </pre></li>
       </ul>
@@ -73,20 +73,20 @@ SyntaxError: invalid syntax
       <li><b>test_rl_fix_simple</b>
       <ul>
       <li>Grade Percentage: 10</li>
-      <li>Your solution failed this test case! taking 0.095 sec</Li>
+      <li>Your solution failed this test case! taking 0.074 sec</Li>
 <li><pre>SyntaxError: invalid syntax (<tested-program>, line 22)</pre></li>
 <li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/execution_base.py", line 63, in call_test_function
-    **pre_hook_info["extra_kwargs"]
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/core.py", line 47, in wrapper
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
+    test_function(
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
     raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/program_container.py", line 38, in run
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
     self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/program_container.py", line 53, in _exec_code
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
     code = compile(source, "<tested-program>", "exec", dont_inherit=True)
   File "<tested-program>", line 22
     self.right, n.right, self.left, n.left = n.right, n.left, n, self.
-                                                                     ^
+                                                                      ^
 SyntaxError: invalid syntax
 </pre></li>
       </ul>
@@ -94,20 +94,20 @@ SyntaxError: invalid syntax
       <li><b>test_key_order_after_ops</b>
       <ul>
       <li>Grade Percentage: 30</li>
-      <li>Your solution failed this test case! taking 0.092 sec</Li>
+      <li>Your solution failed this test case! taking 0.074 sec</Li>
 <li><pre>SyntaxError: invalid syntax (<tested-program>, line 22)</pre></li>
 <li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/execution_base.py", line 63, in call_test_function
-    **pre_hook_info["extra_kwargs"]
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/core.py", line 47, in wrapper
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
+    test_function(
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
     raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/program_container.py", line 38, in run
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
     self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/program_container.py", line 53, in _exec_code
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
     code = compile(source, "<tested-program>", "exec", dont_inherit=True)
   File "<tested-program>", line 22
     self.right, n.right, self.left, n.left = n.right, n.left, n, self.
-                                                                     ^
+                                                                      ^
 SyntaxError: invalid syntax
 </pre></li>
       </ul>
@@ -115,20 +115,20 @@ SyntaxError: invalid syntax
       <li><b>test_stress_testing</b>
       <ul>
       <li>Grade Percentage: 30</li>
-      <li>Your solution failed this test case! taking 0.072 sec</Li>
+      <li>Your solution failed this test case! taking 0.077 sec</Li>
 <li><pre>SyntaxError: invalid syntax (<tested-program>, line 22)</pre></li>
 <li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/execution_base.py", line 63, in call_test_function
-    **pre_hook_info["extra_kwargs"]
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/core.py", line 47, in wrapper
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
+    test_function(
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
     raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/program_container.py", line 38, in run
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
     self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/program_container.py", line 53, in _exec_code
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
     code = compile(source, "<tested-program>", "exec", dont_inherit=True)
   File "<tested-program>", line 22
     self.right, n.right, self.left, n.left = n.right, n.left, n, self.
-                                                                     ^
+                                                                      ^
 SyntaxError: invalid syntax
 </pre></li>
       </ul>
